z-index fix, iphone x fix

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -48,7 +48,7 @@
 
 .tutorial #tutorialcard {
     position: relative;
-    z-index: 1;
+    z-index: @tutorialCardZIndex;
     height: @tutorialCardHeight;
     width: 100%;
     padding-left: 1rem;
